crates/franken-engine/tests/snapshots/certificate_golden_tests__certificate_bundle_mixed_verdicts.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "schema_version": "franken-engine.timescale-certificate-bundle.v1",
  "bead_id": "bd-1lsy.7.14.2",
  "certificates": [
    {
      "schema_version": "franken-engine.timescale-separation-certificate.v1",
      "bead_id": "bd-1lsy.7.14.2",
      "certificate_id": "bundle_cert_1",
      "pair": {
        "fast_controller": "controller_a",
        "slow_controller": "controller_b"
      },
      "ratio": {
        "pair": {
          "fast_controller": "controller_a",
          "slow_controller": "controller_b"
        },
        "ratio_millionths": 10000000,
        "ratio_basis": "observation"
      },
      "verdict": "sufficient",
      "sufficient_threshold_millionths": 10000000,
      "marginal_threshold_millionths": 3000000,
      "fast_profile": {
        "controller_id": "controller_a",
        "observation_interval_millionths": 10000,
        "write_interval_millionths": 10000,
        "sample_count": 1000,
        "measured_epoch": 1640995500
      },
      "slow_profile": {
        "controller_id": "controller_b",
        "observation_interval_millionths": 100000,
        "write_interval_millionths": 100000,
        "sample_count": 200,
        "measured_epoch": 1640995500
      },
      "issued_epoch": 1640995500,
      "evidence_ids": [
        "evidence_bundle_cert_1"
      ]
    },
    {
      "schema_version": "franken-engine.timescale-separation-certificate.v1",
      "bead_id": "bd-1lsy.7.14.2",
      "certificate_id": "bundle_cert_2",
      "pair": {
        "fast_controller": "controller_a",
        "slow_controller": "controller_c"
      },
      "ratio": {
        "pair": {
          "fast_controller": "controller_a",
          "slow_controller": "controller_c"
        },
        "ratio_millionths": 3000000,
        "ratio_basis": "observation"
      },
      "verdict": "marginal",
      "sufficient_threshold_millionths": 10000000,
      "marginal_threshold_millionths": 3000000,
      "fast_profile": {
        "controller_id": "controller_a",
        "observation_interval_millionths": 10000,
        "write_interval_millionths": 10000,
        "sample_count": 1000,
        "measured_epoch": 1640995500
      },
      "slow_profile": {
        "controller_id": "controller_c",
        "observation_interval_millionths": 30000,
        "write_interval_millionths": 30000,
        "sample_count": 200,
        "measured_epoch": 1640995500
      },
      "issued_epoch": 1640995500,
      "evidence_ids": [
        "evidence_bundle_cert_2"
      ]
    }
  ],
  "overall_verdict": "marginal",
  "bundle_epoch": 1640995500,
  "pair_count": 2,
  "sufficient_count": 1,
  "marginal_count": 1,
  "insufficient_count": 0
}
