crates/franken-engine/tests/snapshots/certificate_golden_tests__certificate_evidence_basic.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "dimension": "cpu_time",
  "workload_id": "test_workload_1",
  "certified_budget": 5000000,
  "measured_usage": 3200000,
  "utilisation_millionths": 640000,
  "within_budget": true,
  "sample_count": 1000,
  "evidence_hash": [
    146,
    214,
    227,
    233,
    26,
    213,
    46,
    248,
    104,
    13,
    147,
    77,
    201,
    52,
    192,
    91,
    197,
    111,
    230,
    138,
    155,
    96,
    197,
    228,
    255,
    149,
    179,
    124,
    230,
    231,
    194,
    253
  ]
}
