crates/franken-engine/tests/snapshots/certificate_golden_tests__certificate_evidence_memory.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "dimension": "heap_memory",
  "workload_id": "memory_intensive_workload",
  "certified_budget": 1000000000,
  "measured_usage": 850000000,
  "utilisation_millionths": 850000,
  "within_budget": true,
  "sample_count": 500,
  "evidence_hash": [
    215,
    248,
    13,
    114,
    135,
    247,
    224,
    249,
    213,
    190,
    162,
    42,
    91,
    91,
    126,
    132,
    31,
    252,
    32,
    171,
    177,
    138,
    247,
    24,
    178,
    133,
    233,
    137,
    238,
    120,
    32,
    1
  ]
}
