crates/franken-engine/tests/snapshots/certificate_golden_tests__certificate_evidence_network_io.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "dimension": "network_bandwidth",
  "workload_id": "network_heavy_service",
  "certified_budget": 100000000,
  "measured_usage": 42000000,
  "utilisation_millionths": 420000,
  "within_budget": true,
  "sample_count": 750,
  "evidence_hash": [
    202,
    15,
    1,
    120,
    71,
    12,
    134,
    224,
    181,
    222,
    96,
    125,
    50,
    170,
    99,
    50,
    193,
    211,
    44,
    34,
    162,
    5,
    141,
    82,
    1,
    88,
    120,
    78,
    50,
    231,
    5,
    74
  ]
}
