crates/franken-engine/tests/snapshots/certificate_golden_tests__golden_workflow_test.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "dimension": "io_operations",
  "workload_id": "simple_test",
  "certified_budget": 1000,
  "measured_usage": 500,
  "utilisation_millionths": 500000,
  "within_budget": true,
  "sample_count": 100,
  "evidence_hash": [
    69,
    144,
    25,
    21,
    213,
    123,
    64,
    253,
    51,
    198,
    173,
    226,
    59,
    65,
    69,
    88,
    174,
    25,
    253,
    114,
    56,
    239,
    14,
    27,
    235,
    120,
    88,
    62,
    138,
    173,
    135,
    53
  ]
}
