crates/franken-engine/tests/snapshots/certificate_golden_tests__governance_receipt_comprehensive.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "verdict": "approved",
  "epoch": 42,
  "dimensions_evaluated": [
    "cpu_time",
    "heap_memory"
  ],
  "dimensions_missing": [],
  "certificates": [
    {
      "dimension": "cpu_time",
      "workload_id": "web_server",
      "certified_budget": 2000000,
      "measured_usage": 1500000,
      "utilisation_millionths": 750000,
      "within_budget": true,
      "sample_count": 1000,
      "evidence_hash": [
        102,
        197,
        62,
        107,
        192,
        98,
        18,
        162,
        205,
        81,
        78,
        246,
        32,
        198,
        199,
        125,
        163,
        192,
        66,
        2,
        104,
        11,
        70,
        230,
        215,
        136,
        201,
        183,
        243,
        154,
        5,
        251
      ]
    },
    {
      "dimension": "heap_memory",
      "workload_id": "web_server",
      "certified_budget": 500000000,
      "measured_usage": 320000000,
      "utilisation_millionths": 640000,
      "within_budget": true,
      "sample_count": 1000,
      "evidence_hash": [
        146,
        247,
        99,
        212,
        203,
        55,
        213,
        180,
        236,
        7,
        142,
        32,
        138,
        7,
        87,
        185,
        58,
        5,
        248,
        50,
        193,
        147,
        107,
        164,
        76,
        199,
        55,
        103,
        96,
        78,
        207,
        100
      ]
    }
  ],
  "regressions": [
    {
      "dimension": "cpu_time",
      "workload_id": "web_server",
      "previous_usage": 1400000,
      "current_usage": 1500000,
      "regression_millionths": 71428,
      "within_budget": true,
      "entry_hash": [
        69,
        34,
        21,
        186,
        10,
        2,
        13,
        110,
        223,
        183,
        89,
        187,
        49,
        159,
        25,
        198,
        72,
        91,
        165,
        255,
        163,
        66,
        41,
        223,
        25,
        120,
        28,
        212,
        31,
        203,
        185,
        200
      ]
    }
  ],
  "tail_risks": [
    {
      "dimension": "heap_memory",
      "workload_id": "web_server",
      "tail_ratio_millionths": 2500000,
      "baseline_ratio_millionths": 2000000,
      "drift_millionths": 500000,
      "within_budget": true,
      "entry_hash": [
        191,
        43,
        24,
        160,
        237,
        146,
        136,
        218,
        153,
        117,
        226,
        246,
        128,
        71,
        175,
        205,
        133,
        196,
        198,
        22,
        200,
        45,
        69,
        128,
        130,
        17,
        214,
        14,
        46,
        105,
        191,
        50
      ]
    }
  ],
  "violations": [],
  "content_hash": [
    48,
    89,
    49,
    227,
    173,
    37,
    3,
    31,
    70,
    55,
    240,
    71,
    192,
    135,
    34,
    111,
    217,
    25,
    31,
    18,
    106,
    77,
    254,
    254,
    245,
    177,
    82,
    39,
    186,
    107,
    214,
    126
  ]
}
