crates/franken-engine/tests/snapshots/certificate_golden_tests__governance_receipt_denial.snap
---
source: tests/certificate_golden_tests.rs
expression: json
---
{
  "verdict": "multiple_violations",
  "epoch": 43,
  "dimensions_evaluated": [
    "cpu_time"
  ],
  "dimensions_missing": [],
  "certificates": [
    {
      "dimension": "cpu_time",
      "workload_id": "overloaded_service",
      "certified_budget": 1000000,
      "measured_usage": 1200000,
      "utilisation_millionths": 1200000,
      "within_budget": false,
      "sample_count": 1000,
      "evidence_hash": [
        115,
        145,
        94,
        192,
        177,
        31,
        49,
        36,
        103,
        241,
        29,
        11,
        242,
        173,
        96,
        108,
        122,
        76,
        73,
        101,
        45,
        214,
        107,
        37,
        26,
        72,
        177,
        114,
        113,
        94,
        173,
        114
      ]
    }
  ],
  "regressions": [
    {
      "dimension": "cpu_time",
      "workload_id": "overloaded_service",
      "previous_usage": 800000,
      "current_usage": 1200000,
      "regression_millionths": 500000,
      "within_budget": false,
      "entry_hash": [
        253,
        88,
        5,
        68,
        250,
        148,
        243,
        168,
        77,
        10,
        180,
        188,
        173,
        193,
        183,
        119,
        121,
        28,
        243,
        39,
        211,
        139,
        30,
        82,
        206,
        89,
        140,
        251,
        44,
        118,
        70,
        62
      ]
    }
  ],
  "tail_risks": [],
  "violations": [
    {
      "dimension": "cpu_time",
      "workload_id": "overloaded_service",
      "category": "utilisation_exceeded",
      "summary": "cpu_time utilisation on overloaded_service = 1200000 > 1000000",
      "measured_millionths": 1200000,
      "threshold_millionths": 1000000
    },
    {
      "dimension": "cpu_time",
      "workload_id": "overloaded_service",
      "category": "regression_detected",
      "summary": "cpu_time regression on overloaded_service = 500000 > 100000",
      "measured_millionths": 500000,
      "threshold_millionths": 100000
    }
  ],
  "content_hash": [
    140,
    25,
    168,
    81,
    66,
    18,
    25,
    169,
    158,
    168,
    170,
    103,
    77,
    152,
    91,
    242,
    187,
    189,
    202,
    192,
    49,
    87,
    14,
    7,
    57,
    87,
    124,
    61,
    91,
    143,
    174,
    169
  ]
}
